<resources>
    <string name="app_name">PsychoTherapia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="main_page_description">Welcome to PsychoTherapia. Here, we help you connect with local therapists.</string>
</resources>